Create application for generate F1 qualify result chart from race logs. 2nd realisation